<resources>
    <string name="app_name">Bookstore App</string>

    <string name="empty_view_text">No books are there!</string>

    <string name="editor_activity_title_new_book">Add a Book</string>
    <string name="editor_activity_title_edit_book">Edit Book</string>

    <string name="book">Book Information</string>
    <string name="bookTitle">Book Title</string>
    <string name="bookSupplier">Book Supplier</string>
    <string name="supplier_phone">Supplier Phone number</string>
    <string name="supplier_email">Supplier Email</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="supplier">Supplier Name: </string>

    <string name="info_correction_check">Make sure your information is correct</string>
    <string name="successful_insertion">Book was added successfully</string>
    <string name="failed_insertion">Failed to add the book</string>
    <string name="successful_updating">Book was updated successfully</string>
    <string name="failed_updating">Failed to update the book</string>
    <string name="successful_deletion">Book was deleted successfully</string>
    <string name="failed_deletion">Failed to delete the book</string>
    <string name="delete_book_assurance">Are you sure that you want to delete this book?</string>
    <string name="not_saved_assurance">Are you sure that you want to exit without saving the book?</string>

    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="discard">Discard</string>
    <string name="delete_all">Delete All Books</string>
    <string name="continue_">Continue</string>
    <string name="sell">Sell</string>
    <string name="email">Email</string>
    <string name="call">Call</string>
    <string name="sr">SR</string>

    <string name="no_more_books">No more books to sell!</string>
    <string name="insert_new_book_instruction">Click plus button to add a new book</string>
    <string name="less_than_zero">The number should be more than or equal to zero</string>
    <string name="edit_book_info">Edit book info</string>

</resources>
